syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
	rpc SendSms(SmsRequest) returns (SmsResponse) {}
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message SmsRequest {
	string phoneNum = 1;
	string imgCode = 2;
	string uuid = 3;
}

message SmsResponse {
	string errno = 1;
}

message RegisterRequest {
	string phoneNum = 1;
	string password = 2;
	string smsCode = 3;
}

message RegisterResponse {
	string errno = 1;
}

